force-app/main/default/objects/Pendency__c/Pendency__c.object-meta.xml
<CustomObject>
    <label>Solicitação</label>
    <nameField>
        <label>Pendência</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>