force-app/main/default/objects/Pendency__c/fields/AdditionalRegistration__c.field-meta.xml
<CustomField>
    <fullName>AdditionalRegistration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matrícula Adicional</label>
    <type>Checkbox</type>
</CustomField>