force-app/main/default/objects/Pendency__c/fields/AssignedCRN__c.field-meta.xml
<CustomField>
    <fullName>AssignedCRN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Atribuído ao CRN</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Solicitacoes</relationshipName>
    <type>Lookup</type>
</CustomField>