force-app/main/default/objects/Pendency__c/fields/Assunto__c.field-meta.xml
<CustomField>
    <fullName>Assunto__c</fullName>
    <formula>Caso__r.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assunto</label>
    <type>Text</type>
</CustomField>