force-app/main/default/objects/Pendency__c/fields/BillExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>BillExpirationDate__c</fullName>
    <description>Campos destinado para o fluxo de ITBI Financiado.</description>
    <label>Data do Vencimento do Boleto</label>
    <type>Date</type>
</CustomField>