force-app/main/default/objects/Pendency__c/fields/CasePanelLink__c.field-meta.xml
<CustomField>
    <fullName>CasePanelLink__c</fullName>
    <description>Campo destinado para o fluxo de ITBI financiado. Link do painel do caso (para pegar CCV, tel e email BY e SL)</description>
    <label>Link do Vendas</label>
    <type>Url</type>
</CustomField>