force-app/main/default/objects/Pendency__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <label>Caso</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Só é possível criar a solicitação para a Id da Offer igual ao caso e CCV.</errorMessage>
        <filterItems>
            <field>$Source.PurchaseSaleContract__c</field>
            <operation>equals</operation>
            <valueField>Case.PurchaseSaleContract__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Solicitações</relationshipLabel>
    <relationshipName>Pendencias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>