force-app/main/default/objects/Pendency__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Campo destinado para o fluxo de ITBI Financiado, com o objetivo de identificar a cidade inserida no contrato de compra e venda.</description>
    <formula>TEXT(PurchaseSaleContract__r.CityPropertyAllowsIssueITBI__c)</formula>
    <label>Cidade</label>
    <type>Text</type>
</CustomField>