force-app/main/default/objects/Pendency__c/fields/CommentResponse__c.field-meta.xml
<CustomField>
    <fullName>CommentResponse__c</fullName>
    <label>Resposta da Solicitação</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>