force-app/main/default/objects/Pendency__c/fields/CriadoPor__c.field-meta.xml
<CustomField>
    <fullName>CriadoPor__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Criado Por</label>
    <type>Text</type>
</CustomField>