force-app/main/default/objects/Pendency__c/fields/FS_CRNPartnerName__c.field-meta.xml
<CustomField>
    <fullName>FS_CRNPartnerName__c</fullName>
    <formula>TEXT(PurchaseSaleContract__r.CRNName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do CRN</label>
    <type>Text</type>
</CustomField>