force-app/main/default/objects/Pendency__c/fields/FS_Escrevente__c.field-meta.xml
<CustomField>
    <fullName>FS_Escrevente__c</fullName>
    <formula>Caso__r.PurchaseSaleContract__r.Escrivao__r.FirstName + &apos; &apos; + Caso__r.PurchaseSaleContract__r.Escrivao__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsável CRN</label>
    <type>Text</type>
</CustomField>