force-app/main/default/objects/Pendency__c/fields/FS_IdOffer__c.field-meta.xml
<CustomField>
    <fullName>FS_IdOffer__c</fullName>
    <formula>Caso__r.PurchaseSaleContract__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id da Offer</label>
    <type>Text</type>
</CustomField>