force-app/main/default/objects/Pendency__c/fields/FS_NomeComprador__c.field-meta.xml
<CustomField>
    <fullName>FS_NomeComprador__c</fullName>
    <formula>Caso__r.FS_NomeComprador__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do comprador</label>
    <type>Text</type>
</CustomField>