force-app/main/default/objects/Pendency__c/fields/iSolveLink__c.field-meta.xml
<CustomField>
    <fullName>iSolveLink__c</fullName>
    <description>Campo destinado pra o fluxo de ITBI financiado. Link do iSolve (para pegar Contrato financiamento)</description>
    <label>Link do iSolve</label>
    <type>Url</type>
</CustomField>