force-app/main/default/objects/Pendency__c/fields/ITBIGuide__c.field-meta.xml
<CustomField>
    <fullName>ITBIGuide__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campos destinado para o fluxo de ITBI Financiado com o objetivo de informar se a guia do ITBI foi anexada.</description>
    <label>Guia de ITBI (Anexo de Documento)</label>
    <type>Checkbox</type>
</CustomField>