force-app/main/default/objects/Pendency__c/fields/OpenSource__c.field-meta.xml
<CustomField>
    <fullName>OpenSource__c</fullName>
    <label>Origem da abertura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CloseSource</valueSetName>
    </valueSet>
</CustomField>