force-app/main/default/objects/Pendency__c/fields/PendencyExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>PendencyExpirationDate__c</fullName>
    <label>Data de Vencimento da Solicitação</label>
    <type>Date</type>
</CustomField>