force-app/main/default/objects/Pendency__c/fields/PendencyType__c.field-meta.xml
<CustomField>
    <fullName>PendencyType__c</fullName>
    <label>Tipo de Solicitação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitação de contato (Parceiro ao cliente)</fullName>
            </value>
            <value>
                <fullName>Solicitação de confirmação de agendamento</fullName>
            </value>
            <value>
                <fullName>Atualização de contato do cliente</fullName>
            </value>
            <value>
                <fullName>Informação de que o cliente não deseja seguir com o parceiro</fullName>
            </value>
            <value>
                <fullName>Cliente solicita o reenvio da minuta</fullName>
            </value>
            <value>
                <fullName>Cliente solicita o reenvio da matrícula</fullName>
            </value>
            <value>
                <fullName>Solicitação de Upload da matrícula no Drive</fullName>
            </value>
            <value>
                <fullName>Aviso de Upload de documentação no Drive</fullName>
            </value>
            <value>
                <fullName>Solicitação de agendamento da assinatura</fullName>
            </value>
            <value>
                <fullName>Aditivo - confirmação</fullName>
            </value>
            <value>
                <fullName>Distrato - confirmação</fullName>
            </value>
            <value>
                <fullName>Documentos - inclusão no Drive</fullName>
            </value>
            <value>
                <fullName>Diligência - Status</fullName>
            </value>
            <value>
                <fullName>Pasta de DD - inclusão no Drive</fullName>
            </value>
            <value>
                <fullName>Contato de BY</fullName>
            </value>
            <value>
                <fullName>Contato de SL</fullName>
            </value>
            <value>
                <fullName>Dúvidas</fullName>
            </value>
            <value>
                <fullName>Direito de preferência - Confirmação</fullName>
            </value>
            <value>
                <fullName>Emissão</fullName>
            </value>
            <value>
                <fullName>Reemissão</fullName>
            </value>
            <value>
                <fullName>Validação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>