force-app/main/default/objects/Pendency__c/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>true</active>
    <label>Parceiro</label>
</RecordType>