force-app/main/default/objects/Pendency__c/recordTypes/QuintoAndar.recordType-meta.xml
<RecordType>
    <fullName>QuintoAndar</fullName>
    <active>true</active>
    <label>QuintoAndar</label>
</RecordType>