force-app/main/default/objects/Pendency__c/recordTypes/QuintoAndarFinanced.recordType-meta.xml
<RecordType>
    <fullName>QuintoAndarFinanced</fullName>
    <active>true</active>
    <label>QuintoAndar (Financiado)</label>
</RecordType>