force-app/main/default/objects/Pendency__c/validationRules/FS_CREATE_PENDENCY_FINANCED.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_CREATE_PENDENCY_FINANCED</fullName>
    <active>true</active>
    <description>Informar a Guia de ITBI e/ou Solicitação para avançar.</description>
    <errorConditionFormula>AND(
    NOT(
     CONTAINS(
     LOWER($Profile.Name),
     &quot;admin&quot;)),
    ISPICKVAL(PendencyType__c, &apos;Validação&apos;),
    ISPICKVAL(Status__c, &apos;Completed&apos;),
    
OR(
ITBIGuide__c = FALSE,
ISBLANK(Comments__c))
)</errorConditionFormula>
    <errorMessage>Informar a Guia de ITBI e/ou Solicitação para avançar.</errorMessage>
</ValidationRule>