force-app/main/default/objects/Pendency__c/validationRules/FS_PENDENCY_STATUS_ITBI_FINANCED.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_PENDENCY_STATUS_ITBI_FINANCED</fullName>
    <active>true</active>
    <description>Para concluir a solicitação é imprescindível ANEXAR A GUIA DO ITBI e informar a DATA DE VENCIMENTO DO BOLETO.</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(PendencyType__c, &apos;Emissão&apos;),
ISPICKVAL(PendencyType__c, &apos;Reemissão&apos;)),
NOT(
CONTAINS(
LOWER($Profile.Name),
&quot;admin&quot;)), 
ISPICKVAL(Status__c, &apos;Concluída&apos;),
ITBIGuide__c = False,
ISBLANK(BillExpirationDate__c))</errorConditionFormula>
    <errorMessage>Para concluir a solicitação é imprescindível ANEXAR A GUIA DO ITBI e informar a DATA DE VENCIMENTO DO BOLETO.</errorMessage>
</ValidationRule>