force-app/main/default/objects/Pendency__c/validationRules/FS_SENDER_DESTINATION.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_SENDER_DESTINATION</fullName>
    <active>true</active>
    <description>Você não tem permissão para editar este campo.</description>
    <errorConditionFormula>AND(
    NOT(
     CONTAINS(
     LOWER($Profile.Name),
     &quot;admin&quot;)),
    NOT(ISPICKVAL(PendencyType__c, &apos;Validação&apos;)),
    OR(
        /* Caso 1: Usuário CRN editando &quot;Resposta da Solicitação&quot; em registro criado por ele mesmo */
        AND(
            $Profile.Name = &quot;CRN&quot;,
            CreatedBy.Profile.Name = &quot;CRN&quot;, 
            ISCHANGED(CommentResponse__c)
        ),

        /* Caso 2: Usuário 5A editando &quot;Resposta da Solicitação&quot; em registro criado por ele ou Integração QuintoAndar */
        AND(
            $Profile.Name &lt;&gt; &quot;CRN&quot;,
            CreatedBy.Profile.Name &lt;&gt; &quot;CRN&quot;,
            ISCHANGED(CommentResponse__c)
        ),

        /* Caso 3: Usuário CRN editando &quot;Solicitação&quot; em registro não criado por ele */
        AND(
            $Profile.Name = &quot;CRN&quot;,
            CreatedBy.Profile.Name &lt;&gt; &quot;CRN&quot;,
            ISCHANGED(Comments__c)
        ),

        /* Caso 4: Usuário 5A editando &quot;Solicitação&quot; em registro criado por CRN */
        AND(
            $Profile.Name &lt;&gt; &quot;CRN&quot;,
            CreatedBy.Profile.Name = &quot;CRN&quot;,
            ISCHANGED(Comments__c)
        )
    )
)</errorConditionFormula>
    <errorMessage>Você não tem permissão para editar este campo.</errorMessage>
</ValidationRule>