force-app/main/default/objects/Pendency__c/validationRules/FS_SENDER_DESTINATION_AGENT.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_SENDER_DESTINATION_AGENT</fullName>
    <active>true</active>
    <description>Você não pode editar a solicitação de outra pessoa. Para responder, utilize o campo Resposta da Solicitação.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(PendencyType__c, &apos;Validação&apos;)),
    NOT(CONTAINS($Profile.Name, &quot;Admin&quot;)),
    OR(
        /* Caso 1: Usuário 5A editando &quot;Resposta da Solicitação&quot; em registro criado por ele ou Integração QuintoAndar */
        AND(
            LEFT($Profile.Name, LEN(&quot;CRN&quot;)) &lt;&gt; &quot;CRN&quot;,
            LEFT(CreatedBy.Profile.Name, LEN(&quot;CRN&quot;)) &lt;&gt; &quot;CRN&quot;,
            ISCHANGED(CommentResponse__c)),

        /* Caso 2: Usuário 5A editando &quot;Solicitação&quot; em registro criado por CRN */
        AND(
            LEFT($Profile.Name, LEN(&quot;CRN&quot;)) &lt;&gt; &quot;CRN&quot;,
            LEFT(CreatedBy.Profile.Name, LEN(&quot;CRN&quot;)) = &quot;CRN&quot;,
            ISCHANGED(Comments__c)),

        /* Caso 3: Usuário 5A editando &quot;Pendência&quot; em registro não criado por ele */
        AND(
            LEFT($Profile.Name, LEN(&quot;CRN&quot;)) &lt;&gt; &quot;CRN&quot;,
            LEFT(CreatedBy.Profile.Name, LEN(&quot;CRN&quot;)) = &quot;CRN&quot;,
            ISCHANGED(Name)
            ),

         /* Caso 4: Usuário CRN editando &quot;Tipo de Solicitação&quot; em registro não criado por ele */

         AND(
             LEFT($Profile.Name, LEN(&quot;CRN&quot;)) &lt;&gt; &quot;CRN&quot;,
             LEFT(CreatedBy.Profile.Name, LEN(&quot;CRN&quot;)) = &quot;CRN&quot;,
             ISCHANGED(PendencyType__c)
             ),


        /* BLOQUEIOS DE CRIAÇÃO */

        /* Criando registro: CommentResponse__c deve estar em branco */
        AND(
        ISNEW(),
        CommentResponse__c != null)
        )
        )</errorConditionFormula>
    <errorMessage>Você não pode editar a solicitação de outra pessoa. Para responder, utilize o campo Resposta da Solicitação.</errorMessage>
</ValidationRule>